# shelter

./: README.md  data.json  pyproject.toml
config/: settings.py  urls.py
dogs/: admin.py  models.py  urls.py  views.py
dogs/migrations/: 0001_initial.py  0002_category.py  0003_alter_category_options_alter_category_description_and_more.py
dogs/templates/dogs/: base.html  categories.html  dogs.html  index.html
