[tool.poetry]
name = "shelter"
version = "0.1.0"
description = ""
authors = ["Aleksey Belyaev <lesha.belyaev.73@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.2.0"
ipython = "^8.20.0"
static = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
